[1.9] Issue 4941 (Net panel scrollbars show up when not necessary) http://code.google.com/p/fbug/issues/detail?id=4941
http://code.google.com/p/fbug/source/detail?r=12141

--- a/extension/skin/classic/net.css
+++ b/extension/skin/classic/net.css
@@ -416,11 +416,11 @@
 /* If coming from BF cache (no network activity) */
 
 .netTable .netRow.fromBFCache {
-    visibility: collapse;
+    display: none;
 }
 
 .netTable.showBFCacheResponses .netRow.fromBFCache {
-    visibility: visible;
+    display: table-row;
 }
 
 .netRow.fromBFCache .netLabel,
